# play-sound-by-click-sdl3-c

./: .gitignore  CMakeLists.txt  README.md  build.bat  config.bat
public/: index.html
src/: main.c
